# powerctl

./: Cargo.toml
.cargo/: config
libpowerctl/src/: app.rs  coolingdevice.rs  hwmon.rs  lib.rs  maybe.rs  outpairs.rs  output.rs  thermalzone.rs
powerctl/: main.rs
